--- a/frontend/src/components/Apicard/apicard.module.css
+++ b/frontend/src/components/Apicard/apicard.module.css
@@ -1,7 +1,7 @@
 .card {
   flex-wrap: wrap;
   min-height: 300px;
-  padding: 10px 20px;
+  padding: 20px;
 
   width: 260px;
   float: left;
@@ -12,8 +12,8 @@
 }
 .image {
   width: 260px;
-  /* height: 190px; */
-  /* border: 1px solid black; */
+  height: 160px;
+  border-radius: 10px;
 }
 .title {
   width: 224px;
@@ -37,4 +37,20 @@
   line-height: 21px;
   letter-spacing: -0.02em;
   color: #566474;
+}
+
+.card button {
+  padding: 8px 14px;
+  background: #3245a5;
+
+  border-radius: 5px;
+  border: none;
+}
+.card a {
+  color: white;
+  font-size: 15px;
+}
+
+.card button:hover {
+  background: #142683;
 }
