--- a/frontend/src/components/SignupForm/signupform.module.css
+++ b/frontend/src/components/SignupForm/signupform.module.css
@@ -10,11 +10,12 @@
   /* padding: 10px; */
 }
 .input {
-  margin: 10px;
+  margin: 10px 0px;
 
   width: 100%;
   height: 44px;
-
+  box-sizing: border-box;
+  padding: 0px 20px;
   border: 1px solid #ebf0f5;
   border-radius: 5px;
 }
@@ -32,7 +33,7 @@ form {
   margin: 40px 0 40px 0;
 }
 .button {
-  margin: 10px;
+  margin: 10px 0px;
   background: #142683;
   border-radius: 5px;
   width: 100%;
