--- a/frontend/src/pages/Marketplace/marketplace.module.css
+++ b/frontend/src/pages/Marketplace/marketplace.module.css
@@ -17,11 +17,11 @@
   width: 1240px;
   height: 186px;
   left: 100px;
-  /* top:148px; */
   background: #c3e7fd;
   border-radius: 10px;
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
 }
 
 .topcardphoto {
@@ -51,7 +51,6 @@
   font-weight: bolder;
   font-size: 30px;
   line-height: 58px;
-  letter-spacing: -0.02em;
   color: #1e272e;
 }
 .bottomtext {
@@ -86,8 +85,7 @@
 
 .viewButton:hover {
   cursor: pointer;
-  width: 135px;
-  height: 46px;
+  background-color: #000;
 }
 .cards {
   display: flex;
@@ -100,6 +98,18 @@
   margin: 5px;
   height: 1000px;
 }
+
+.text {
+  margin-left: 45px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 31px;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
 @media only screen and (max-width: 800px) {
   .cards {
     flex-wrap: wrap;
@@ -141,14 +151,4 @@
     left: 0%;
     top: 11%;
   }
-}
-
-.allAPI {
-  margin-left: 45px;
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 31px;
-  letter-spacing: -0.02em;
 }
