--- a/frontend/src/components/AddApi/addapi.module.css
+++ b/frontend/src/components/AddApi/addapi.module.css
@@ -69,3 +69,10 @@ form {
   padding: 8px 20px;
   border: 1px solid #ebf0f5;
 }
+
+.textwarn {
+  color: red;
+  font-size: 16px;
+  margin-left: 10px;
+  margin-top: 0px;
+}
