--- a/frontend/src/pages/Marketplace/marketplace.module.css
+++ b/frontend/src/pages/Marketplace/marketplace.module.css
@@ -6,17 +6,15 @@
 
 .body {
   background: #e5e5e5;
-  /* flex: 80%; */
   display: flex;
   flex-direction: column;
   padding: 30px;
 }
 
 .topcard {
-  position: relative;
-  width: 1240px;
+  width: 90%;
   height: 186px;
-  left: 100px;
+  margin: 0px auto;
   background: #c3e7fd;
   border-radius: 10px;
   display: flex;
@@ -25,14 +23,11 @@
 }
 
 .topcardphoto {
-  /* position: absolute; */
-  width: 294px;
-  height: 186px;
-  z-index: 10000;
+  width: 300px;
+  border-radius: 10px 0px 0px 10px;
 }
 
 .semicircle {
-  /* position: absolute; */
   width: 100px;
   height: 186px;
   background: #d3b4f6;
@@ -41,46 +36,38 @@
 }
 
 .toptext {
-  position: absolute;
-  width: 495px;
-  height: 98px;
-  left: 457px;
-  top: 20px;
+  width: 350px;
   font-family: Bebas Neue;
   font-style: normal;
   font-weight: bolder;
   font-size: 30px;
-  line-height: 58px;
   color: #1e272e;
+  margin: 30px 0px 0px 10px;
 }
 .bottomtext {
-  position: absolute;
-  width: 319px;
-  height: 36px;
-  top: 60px;
-  left: 457px;
+  width: 350px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
-  font-size: 28px;
+  font-size: 24px;
   line-height: 36px;
   letter-spacing: -0.02em;
   color: #566474;
+  margin-top: 0px;
+  margin-left: 10px;
 }
 .viewButton {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 8px 16px;
-  position: absolute;
+  padding: 6px 16px;
   width: 133px;
-  height: 44px;
-  left: 84%;
-  top: 30%;
+  height: 40px;
   background: #1e272e;
   border-radius: 5px;
   color: white;
+  margin: auto auto;
 }
 
 .viewButton:hover {
@@ -91,7 +78,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0px auto;
-  /* background: #e5e5e5; */
+  margin-left: 10px;
 }
 .card {
   flex: 1 0 21%;
@@ -110,19 +97,20 @@
   margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 800px) {
+@media (max-width: 800px) {
   .cards {
     flex-wrap: wrap;
   }
   .topcard {
-    width: 80%;
+    display: none;
+    /* width: 80%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 
     padding: 8px;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
   }
   .topcardphoto {
     width: 110px;
