--- a/frontend/src/pages/Marketplace/marketplace.module.css
+++ b/frontend/src/pages/Marketplace/marketplace.module.css
@@ -61,16 +61,18 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: auto auto;
+}
+.viewButton button {
+  color: white;
   padding: 6px 16px;
   width: 133px;
   height: 40px;
   background: #1e272e;
   border-radius: 5px;
-  color: white;
-  margin: auto auto;
+  cursor: pointer;
 }
-
-.viewButton:hover {
+.viewButton button:hover {
   cursor: pointer;
   background-color: #000;
 }
